# eostudio-old

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
js/: App.jsx  ClassRecord.jsx  Editor.jsx  FileImporter.jsx  FileTable.jsx  FileUpload.jsx  Gfx.js  GfxType.js  ItemRecord.jsx  NPCRecord.jsx  RecordEditor.jsx  Welcome.jsx  index.js  index.jsx  utils.js
js/Records/: Drop.jsx  Item.jsx  Spell.jsx
scss/: style.scss
src/: lib.rs
static/: index.html
